# clipContentsDesigner

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CODEOWNERS  Noelia Ruiz Martínez_0xCC2A8E97_public.asc  TYPE_IGNORE_ANALYSIS.md  _markdownlint.json  appveyor.yml  buildVars.py  changelog.md  clipContentsDesigner.pot  clipContentsDesigner.xliff  crowdin.yml  package-lock.json  prek.toml  pyproject.toml  readme.md  sconstruct  setup.cfg  tox.ini
.github/: dependabot.yml  labeler.yml
.github/scripts/: checkTranslation.py  crowdinSync.ps1  markdownTranslate.py  setOutputs.py
.github/workflows/: addCheckForTranslations.yaml  addon.yml  automaticRelease.yaml  automaticReleaseL10nUpdates.yaml  build_addon.yml  checkForTranslations.yaml  checkPot.yaml  checkTranslatorsComments.yml  codeql.yml  createDiscussion.yml  crowdinAction.yml  crowdinL10n.yml  dependabotMerge.yml  diff (2).yml  diff.yml  fetchTranslationsFromCrowdin.yaml  l10n.yaml  lint.yaml  manualRelease.yaml  markdownlint.yml  mypy.yaml  pythonapp.yml  release.yml  store.yaml  test.yaml  test.yml  testIssue.yaml  testWithNVDA.yaml  upload-on-tag.yaml
addon/: installTasks.py
addon/doc/ar/: readme.md
addon/doc/bg/: readme.md
addon/doc/da/: readme.md
addon/doc/de/: readme.md
addon/doc/es/: readme.md
addon/doc/fi/: readme.md
addon/doc/fr/: readme.md
addon/doc/gl/: readme.md
addon/doc/hr/: readme.md
addon/doc/hu/: readme.md
addon/doc/it/: readme.md
addon/doc/ja/: readme.md
addon/doc/ko/: readme.md
addon/doc/ne/: readme.md
addon/doc/nl/: readme.md
addon/doc/pl/: readme.md
addon/doc/pt_BR/: readme.md
addon/doc/pt_PT/: readme.md
addon/doc/ro/: readme.md
addon/doc/ru/: readme.md
addon/doc/sk/: readme.md
addon/doc/sr/: readme.md
addon/doc/tr/: readme.md
addon/doc/uk/: readme.md
addon/doc/vi/: readme.md
addon/doc/zh/: readme.md
addon/doc/zh_CN/: readme.md
addon/doc/zh_TW/: readme.md
addon/globalPlugins/: appendText.py  clipContentsDesigner.py  clipTextManager.py
addon/globalPlugins/appendText/: __init__.py
addon/globalPlugins/clipContentsDesigner/: __init__.py  clipmanager.py  msg.py  securityUtils.py
addon/locale/af_ZA/LC_MESSAGES/: nvda.po
addon/locale/am/LC_MESSAGES/: nvda.po
addon/locale/am_ET/LC_MESSAGES/: nvda.po
addon/locale/an/LC_MESSAGES/: nvda.po
addon/locale/an_ES/LC_MESSAGES/: nvda.po
addon/locale/ar/LC_MESSAGES/: nvda.po
addon/locale/ar_SA/LC_MESSAGES/: nvda.po
addon/locale/bg/LC_MESSAGES/: nvda.po
addon/locale/bg_BG/LC_MESSAGES/: nvda.po
addon/locale/bn/LC_MESSAGES/: nvda.po
addon/locale/bs/LC_MESSAGES/: nvda.po
addon/locale/ca/LC_MESSAGES/: nvda.po
addon/locale/ca_ES/LC_MESSAGES/: nvda.po
addon/locale/ckb/LC_MESSAGES/: nvda.po
addon/locale/cs/LC_MESSAGES/: nvda.po
addon/locale/da/LC_MESSAGES/: nvda.po
addon/locale/de/LC_MESSAGES/: nvda.po
addon/locale/de_CH/LC_MESSAGES/: nvda.po
addon/locale/el/LC_MESSAGES/: nvda.po
addon/locale/en/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/es_CO/LC_MESSAGES/: nvda.po
addon/locale/es_ES/LC_MESSAGES/: nvda.po
addon/locale/et/LC_MESSAGES/: nvda.po
addon/locale/fa/LC_MESSAGES/: nvda.po
addon/locale/fi/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/locale/fr_FR/LC_MESSAGES/: nvda.po
addon/locale/ga/LC_MESSAGES/: nvda.po
addon/locale/gl/LC_MESSAGES/: nvda.po
addon/locale/he/LC_MESSAGES/: nvda.po
addon/locale/hi/LC_MESSAGES/: nvda.po
addon/locale/hr/LC_MESSAGES/: nvda.po
addon/locale/hr_HR/LC_MESSAGES/: nvda.po
addon/locale/hu/LC_MESSAGES/: nvda.po
addon/locale/id/LC_MESSAGES/: nvda.po
addon/locale/is/LC_MESSAGES/: nvda.po
addon/locale/it/LC_MESSAGES/: nvda.po
addon/locale/ja/LC_MESSAGES/: nvda.po
addon/locale/ka/LC_MESSAGES/: nvda.po
addon/locale/km/LC_MESSAGES/: nvda.po
addon/locale/kmr/LC_MESSAGES/: nvda.po
addon/locale/kn/LC_MESSAGES/: nvda.po
addon/locale/ko/LC_MESSAGES/: nvda.po
addon/locale/ky/LC_MESSAGES/: nvda.po
addon/locale/lt/LC_MESSAGES/: nvda.po
addon/locale/mk/LC_MESSAGES/: nvda.po
addon/locale/mn/LC_MESSAGES/: nvda.po
addon/locale/my/LC_MESSAGES/: nvda.po
addon/locale/nb_NO/LC_MESSAGES/: nvda.po
addon/locale/ne/LC_MESSAGES/: nvda.po
addon/locale/nl/LC_MESSAGES/: nvda.po
addon/locale/nn_NO/LC_MESSAGES/: nvda.po
site_scons/site_tools/NVDATool/: __init__.py
stubs/: SettingsPanel.pyi  __builtins__.pyi  addonHandler.pyi  addonSettingsPanel.pyi  api.pyi  browseMode.pyi  buildVars.pyi  config.pyi  configValidationData.pyi  config_conf.pyi  controlTypes.pyi  core.pyi  globalPluginHandler.pyi  globalVars.pyi  guiHelper.pyi  guiHelper_BoxSizerHelper.pyi  gui_nvdaControls.pyi  inputCore.pyi  inputCore_manager.pyi  inputCore_manager_userGestureMap.pyi  installTasks.pyi  keyboardHandler.pyi  logHandler.pyi  mathPres.pyi  messageDialog.pyi  messageDialog_ReturnCode.pyi  nvda.pyi  nvdaControls.pyi  nvda_full.pyi  os.pyi  scriptHandler.pyi  textInfos.pyi  ui.pyi  underscore.pyi  winUser.pyi  wx.pyi
stubs/gui/: __init__.pyi  guiHelper.pyi  message.pyi  settingsDialogs.pyi
(+22 files in other folders)
